* standard/load.java (apply): Take Path parameter. 	Simplify resolving to URL - let Path.toURL handle it. 	(apply2): Update accordingly. 	(loadCompiled): Take Path parameter. 	* Shell.java (runFile): Update accordingly.
git-svn-id: svn://sourceware.org/svn/kawa/trunk@5790 5e0a886f-7f45-49c5-bc19-40643649e37f